--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -14,7 +14,8 @@ jobs:
     runs-on: ubuntu-18.04
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        python-version:
+        - 3.8
 
     steps:
     - uses: actions/checkout@v2
@@ -29,9 +30,9 @@ jobs:
         poetry install     
     - name: static analysis
       run: |
-        poetry run flake8 quantum_simulator
-        poetry run black --check quantum_simulator
-        poetry run mypy quantum_simulator
+        poetry run flake8 .
+        poetry run black --check .
+        poetry run mypy .
     - name: Test with pytest
       run: |
         poetry run pytest -v tests
