--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [flake8]
 max-line-length = 88
+ignore = F811, W503
 exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,.mypy_cache,.pytest_cache,.venv,.vscode,quantum_simulator.egg-info
 
 [mypy]
