--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ numpy = "^1.18.3"
 typing = "^3.7.4"
 
 [tool.poetry.dev-dependencies]
+sphinx = "^3.0.3"
+sphinx_rtd_theme = "^0.4.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
