--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.6"
 numpy = "^1.18.3"
 typing = "^3.7.4"
 cupy-cuda102 = "^7.5.0"
+snakeviz = "^2.1.0"
 
 [tool.poetry.dev-dependencies]
 black = "19.10b0"
