--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,18 +5,18 @@ description = "Qunantum Computing Simulator by BBRFKR"
 authors = ["bbrfkr <bbrfkr@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.9"
 numpy = "^1.18.3"
-typing = "^3.7.4"
-snakeviz = "^2.1.0"
 
 [tool.poetry.dev-dependencies]
-black = "19.10b0"
-flake8 = "^3.7.9"
-isort = "^4.3.21"
-mypy = "^0.770"
-pytest = "^5.4.1"
-pytest-mock = "^3.1.0"
+snakeviz = "^2.1.0"
+typing = "^3.7.4"
+black = "*"
+flake8 = "*"
+isort = "*"
+mypy = "*"
+pytest = "*"
+pytest-mock = "*"
 sphinx = "^3.0.3"
 sphinx_rtd_theme = "^0.4.3"
 
