--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,8 @@ max-line-length = 88
 ignore = F811, W503
 exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,.mypy_cache,.pytest_cache,.venv,.vscode,quantum_simulator.egg-info
 per-file-ignores=
-    tests/**/test_*:E402
-    tests/**/fixtures/*:E402
+    test_*:E402
+    **/fixtures/*:E402
+    conftest.py:F401,F403
 [mypy]
 ignore_missing_imports = True
